--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      App personal de Derek Josue Solorzano Bocanegra
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-img src="../../assets/Yo.png">
+    </ion-img>
+    <ion-card-header>
+      <ion-card-title>
+        Derek
+      </ion-card-title>
+      <ion-card-subtitle>
+        Estudiante Universitario
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam excepturi maiores dicta! Commodi nisi necessitatibus harum sed, voluptates eum minima voluptas, magnam unde repellendus veritatis laboriosam architecto vitae. Mollitia, expedita!
+        Quod maiores nihil dicta, atque laborum adipisci beatae laboriosam mollitia, autem nostrum tempora tenetur aliquam accusantium quis praesentium vel illum dolorum, quam quos. Laborum ullam quod eligendi at, neque blanditiis.
+        A ea commodi sint excepturi, ullam, optio neque amet eaque vel cumque alias provident possimus earum soluta sapiente unde deleniti et iste dolore tenetur asperiores quas sit eligendi! Nisi, quam.
+        Alias ipsa magni recusandae beatae accusantium labore rerum harum, placeat assumenda sed ea eius deleniti vel itaque dignissimos odio mollitia ex nesciunt. Aliquid, recusandae! Quis in facere nobis deserunt libero?
+        Aliquid veritatis sed odit sit placeat quae recusandae distinctio voluptate, similique quibusdam eveniet mollitia accusamus exercitationem delectus aliquam, adipisci nam ex autem. Iste alias commodi perferendis laboriosam aliquid voluptatem doloribus.
+      </p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
