--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,12 +6,42 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content>
+  <ion-card>
+    <ion-img src="../../assets/AppMovil.png"></ion-img>
+    <ion-card-header>
+      <ion-card-title>De parte de la materia de: Dispositivos Moviles</ion-card-title>
+      <ion-card-subtitle>Impartida por el maestro: José de Jesús Lenin Valencia Cruz</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      El desarrollo de aplicaciones en dispositivos móviles se refiere al proceso de creación de software para smartphones, tablets y otros dispositivos portátiles, adaptándose a las características específicas de cada plataforma.
+      Este proceso incluye la escritura de código, la implementación de la aplicación, la prueba y la distribución en tiendas de aplicaciones como Google Play Store o Apple App Store.
+    </ion-card-content>
+    
+  </ion-card>
+  <ion-content color="light">
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-title>
+          Tecnologias utilizadas
+        </ion-title>
+      </ion-item>
+      <ion-item>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Mega Man X</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Pac-Man</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Super Mario World</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
 </ion-content>
