--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,19 +28,19 @@
         </ion-title>
       </ion-item>
       <ion-item>
-        <ion-label>Pokémon Yellow</ion-label>
+        <ion-label>HTML</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Mega Man X</ion-label>
+        <ion-label>CSS</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>The Legend of Zelda</ion-label>
+        <ion-label>Angular</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Pac-Man</ion-label>
+        <ion-label>JavaScript</ion-label>
       </ion-item>
       <ion-item>
-        <ion-label>Super Mario World</ion-label>
+        <ion-label>Python</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
